# myne

./: .gitignore  Cargo.toml  README.md  mkdocs.yml  myne.pyi  noxfile.py  pyproject.toml  zensical.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  lint-and-type-check.yml  release.yml  tests.yml
src/: lib.rs  parsers.rs  repr.rs
tests/: test_book.py
