[package]
name = "myne"
version = "0.2.0"
edition = "2024"
rust-version = "1.86"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "myne"
crate-type = ["cdylib"]

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
lazy-regex = "3.4.1"
pyo3 = { version = "0.24.2", features = [
    "extension-module",
    "generate-import-lib",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"

[features]
abi3 = ["pyo3/abi3-py39"]

[dev-dependencies]
rstest = "0.25.0"
