[package]
name = "myne"
version = "0.3.0"
edition = "2024"
rust-version = "1.97"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]
name = "myne"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
lazy-regex = "3.6"
pyo3 = { version = "0.29", features = ["abi3", "extension-module"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
rstest = "0.26"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
