[project]
name = "myne"
description = "Parser for manga and light novel filenames."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT OR Apache-2.0"
authors = [{ name = "Ravencentric", email = "me@ravencentric.cc" }]
keywords = ["manga", "parser"]
classifiers = [
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Programming Language :: Rust",
  "Typing :: Typed",
]
dependencies = []
dynamic = ["version"]  # Sourced from Cargo.toml

[project.urls]
Documentation = "https://ravencentric.cc/myne/"
Repository = "https://github.com/Ravencentric/myne"

[project.scripts]
myne = "myne.myne:script"

[dependency-groups]
dev = [
  "maturin>=1.8.6",
  "nox>=2025.5.1",
  { include-group = "docs" },
  { include-group = "lint" },
  { include-group = "test" },
]
docs = [
  "mkdocs-autorefs>=1.4.1",
  "mkdocs-material>=9.6.12",
  "mkdocstrings[python]>=0.29.1",
]
lint = ["mypy>=1.15.0", "ruff>=0.11.8"]
test = ["pytest>=8.3.5"]

[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[tool.cibuildwheel]
enable = ["pypy", "cpython-freethreading"]
archs = "auto64"
build-frontend = "build[uv]"
test-groups = ["test"]
test-command = "pytest {package}/tests"

[tool.cibuildwheel.linux]
before-all = "curl -sSf https://sh.rustup.rs | sh -s -- -y"
environment = { PATH = "$HOME/.cargo/bin:$PATH" }

[tool.cibuildwheel.macos]
environment = { MACOSX_DEPLOYMENT_TARGET = "11.0" }

[tool.maturin]
editable-profile = "dev"

[tool.mypy]
strict = true
pretty = true
enable_error_code = ["ignore-without-code"]

[tool.pytest.ini_options]
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config", "-v"]
filterwarnings = ["error"]
log_cli_level = "INFO"
testpaths = ["tests"]

[tool.ruff.lint]
extend-select = ["I", "RUF", "UP", "N", "D4", "PYI", "ANN"]
ignore = ["PYI021"]
fixable = ["ALL"]

[tool.ruff.lint.extend-per-file-ignores]
"tests/*" = ["D"]

[tool.uv]
cache-keys = [{ file = "Cargo.toml" }, { file = "src/**/*.rs" }]
