[project]
name = "myne"
description = "Parser for manga and light novel filenames."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT OR Apache-2.0"
authors = [{ name = "Ravencentric", email = "me@ravencentric.cc" }]
keywords = ["manga", "parser"]
classifiers = [
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Rust",
  "Typing :: Typed",
]
dependencies = []
dynamic = ["version"]  # Sourced from Cargo.toml

[project.urls]
Documentation = "https://ravencentric.cc/myne/"
Repository = "https://github.com/Ravencentric/myne"

[project.scripts]
myne = "myne.myne:script"

[dependency-groups]
dev = [
  "nox>=2026",
  { include-group = "docs" },
  { include-group = "lint" },
  { include-group = "test" },
]
docs = [
  "mkdocs-autorefs>=1.4.1",
  "mkdocs-material>=9.6.12",
  "mkdocstrings[python]>=0.29.1",
]
lint = ["mypy>=2", "ruff>=0.15", { include-group = "test" }]
test = ["pytest>=9"]

[build-system]
requires = ["maturin>=1.14,<2.0"]
build-backend = "maturin"

[tool.cibuildwheel]
build = ["cp310-*", "cp3??t-*"]
archs = "auto64"
build-frontend = "build[uv]"
test-groups = ["test"]
test-command = "pytest {package}/tests"

[tool.cibuildwheel.linux]
# https://cibuildwheel.pypa.io/en/stable/faq/#building-rust-wheels
before-all = "curl -sSf https://sh.rustup.rs | sh -s -- -y"
environment = { PATH = "$HOME/.cargo/bin:$PATH" }

[tool.cibuildwheel.macos]
environment = { MACOSX_DEPLOYMENT_TARGET = "11.0" }

[tool.maturin]
editable-profile = "dev"
locked = true

[tool.mypy]
strict = true
pretty = true
files = ["python/**/*.pyi", "tests/**/*.py"]
enable_error_code = ["ignore-without-code"]

[tool.pytest]
addopts = ["--showlocals", "-ra", "-v"]
filterwarnings = ["error"]
log_cli_level = "INFO"
strict = true
testpaths = ["tests"]

[tool.ruff.lint]
extend-select = ["I", "RUF", "UP", "N", "D4", "PYI", "ANN"]
ignore = ["PYI021"]
fixable = ["ALL"]

[tool.ruff.lint.extend-per-file-ignores]
"tests/*" = ["D"]

[tool.uv]
cache-keys = [
  { file = "Cargo.toml" },
  { file = "pyproject.toml" },
  { file = "src/**/*.rs" },
]
exclude-newer = "1 week"
